--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
 	"type": "module",
 	"scripts": {
 		"start": "node dist/index.js",
-		"dev": "nodemon -r ts-node/register --esm src/index.ts",
+		"dev": "pnpm drizzle-kit migrate && nodemon -r ts-node/register --esm src/index.ts",
 		"build": "tsc",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"migrate-generate": "pnpm drizzle-kit generate",
+		"migrate-up": "pnpm drizzle-kit migrate"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^16.5.0",
+		"drizzle-orm": "^0.43.1",
 		"express": "^4.18.3",
+		"pg": "^8.16.0",
 		"puppeteer": "^24.8.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.11.24",
+		"@types/pg": "^8.15.2",
+		"drizzle-kit": "^0.31.1",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
+		"tsx": "^4.19.4",
 		"typescript": "^5.3.3"
 	},
 	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
+
