--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "node dist/index.js",
 		"dev": "pnpm drizzle-kit migrate && nodemon -r ts-node/register --esm src/index.ts",
 		"build": "tsc",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "vitest",
 		"migrate-generate": "pnpm drizzle-kit generate",
 		"migrate-up": "pnpm drizzle-kit migrate"
 	},
@@ -30,7 +30,8 @@
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
 		"tsx": "^4.19.4",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"vitest": "^3.1.4"
 	},
 	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
