--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.11.24",
 		"@types/pg": "^8.15.2",
+		"@types/supertest": "^6.0.3",
 		"drizzle-kit": "^0.31.1",
 		"nodemon": "^3.1.10",
+		"supertest": "^7.1.1",
 		"ts-node": "^10.9.2",
 		"tsx": "^4.19.4",
 		"typescript": "^5.3.3",
@@ -35,4 +37,3 @@
 	},
 	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
-
