--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"dev": "pnpm drizzle-kit migrate && nodemon -r ts-node/register --esm src/index.ts",
 		"build": "tsc",
 		"test": "vitest",
-		"migrate-generate": "pnpm drizzle-kit generate",
-		"migrate-up": "pnpm drizzle-kit migrate"
+		"migrate:generate": "pnpm drizzle-kit generate",
+		"migrate:up": "pnpm drizzle-kit migrate"
 	},
 	"keywords": [],
 	"author": "",
@@ -37,3 +37,4 @@
 	},
 	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
+
