--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
 		"express": "^4.18.3",
 		"pg": "^8.16.0",
-		"puppeteer": "^24.8.2"
+		"pg-boss": "^10.3.2",
+		"puppeteer": "^24.8.2",
+		"zod": "^3.25.51"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
