--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ env:
     FRONTEND_BASE_URL: http://localhost:3000
     PORT: 8002
 jobs:
-    test:
+    setup:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -31,10 +31,17 @@ jobs:
 
             - name: 'Install Dependencies'
               run: pnpm install
-
+    test:
+        runs-on: ubuntu-latest
+        needs: setup
+        steps:
             - name: 'Run tests'
               run: pnpm vitest --coverage.enabled true
 
+    coverage:
+        runs-on: ubuntu-latest
+        needs: test
+        steps:
             - name: 'Report Coverage'
               if: always()
               uses: davelosert/vitest-coverage-report-action@v2
