--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@types/node": "^20.11.24",
 		"@types/pg": "^8.15.2",
 		"@types/supertest": "^6.0.3",
+		"@vitest/coverage-v8": "^3.2.4",
 		"drizzle-kit": "^0.31.1",
 		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.1.5",
@@ -57,7 +58,7 @@
 		"tsx": "^4.19.4",
 		"typescript": "^5.3.3",
 		"typescript-eslint": "^8.34.0",
-		"vitest": "^3.1.4"
+		"vitest": "^3.2.4"
 	},
 	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
