--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,6 +35,9 @@ jobs:
             - name: 'Install Puppeteer Dependencies'
               run: pnpm puppeteer browsers install chrome
 
+            - name: Disable AppArmor
+              run: echo 0 | sudo tee /proc/sys/kernel/apparmor_restrict_unprivileged_userns
+
             - name: 'Create env file'
               run: |
                   touch .env.test
