--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,8 @@ env:
 jobs:
     test:
         runs-on: ubuntu-latest
+        permissions:
+            pull-requests: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
