--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,3 +53,5 @@ jobs:
             - name: 'Report Coverage'
               if: always()
               uses: davelosert/vitest-coverage-report-action@v2
+              with:
+                  file-coverage-mode: all
