--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,3 +55,4 @@ jobs:
               uses: davelosert/vitest-coverage-report-action@v2
               with:
                   file-coverage-mode: all
+                  comment-on: commit
