--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,6 +11,7 @@ jobs:
         runs-on: ubuntu-latest
         permissions:
             pull-requests: write
+            contents: read
         steps:
             - name: Checkout
               uses: actions/checkout@v4
