Added api auth and race deletion, fixed timezone issues

--- a/.sample.env
+++ b/.sample.env
@@ -1,3 +1,5 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/mtb_races_db
 FRONTEND_BASE_URL=http://localhost:3000
 PORT=8002
+API_KEY=123456
+TZ=UTC
