Updated workflow file with new env

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ env:
     DATABASE_URL: postgres://postgres:postgres@localhost:5433/mtb_races_test_db
     FRONTEND_BASE_URL: http://localhost:3000
     PORT: 8002
+    TZ: UTC
 jobs:
     test:
         runs-on: ubuntu-latest
@@ -48,6 +49,7 @@ jobs:
                   echo DATABASE_URL=$DATABASE_URL
                   echo FRONTEND_BASE_URL=$FRONTEND_BASE_URL
                   echo PORT=$PORT
+                  echo TZ=$TZ
 
             - name: 'Run Tests'
               run: pnpm vitest run --coverage.enabled true
