--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ env:
     DATABASE_URL: postgres://postgres:postgres@localhost:5433/mtb_races_test_db
     FRONTEND_BASE_URL: http://localhost:3000
     PORT: 8002
+    API_KEY: test-api-key
     TZ: UTC
 jobs:
     test:
@@ -50,6 +51,7 @@ jobs:
                   echo FRONTEND_BASE_URL=$FRONTEND_BASE_URL
                   echo PORT=$PORT
                   echo TZ=$TZ
+                  echo API_KEY=$API_KEY
 
             - name: 'Run Tests'
               run: pnpm vitest run --coverage.enabled true
