--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -15,6 +15,11 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
+            - name: 'Install PNPM'
+              uses: pnpm/action-setup@v4
+              with:
+                  run_install: false
+
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
