Removed ci command (#11)

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -28,7 +28,7 @@ jobs:
 
             - name: Install dependencies and build
               run: |
-                  pnpm ci
+                  pnpm install
                   pnpm build
 
             - name: Upload artifact for deployment
