Fixed tsconfig build issues (#12)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"start": "node dist/index.js",
 		"dev": "pnpm drizzle-kit migrate && nodemon -r ts-node/register --esm src/index.ts",
-		"build": "tsc",
+		"build": "tsc -p tsconfig.build.json",
 		"test": "vitest run",
 		"test:coverage": "vitest run --coverage.enabled true",
 		"migrate:generate": "pnpm drizzle-kit generate",
