--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -4,55 +4,34 @@ on:
     push:
         branches: [master]
 
-env:
-    AZURE_WEBAPP_NAME: switchback-dev-api
-    AZURE_WEBAPP_PACKAGE_PATH: '.'
-    NODE_VERSION: '22.x'
-
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-
-            - name: 'Install PNPM'
-              uses: pnpm/action-setup@v4
-              with:
-                  run_install: false
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: ${{ env.NODE_VERSION }}
-                  cache: 'pnpm'
-
-            - name: Install dependencies and build
-              run: |
-                  pnpm install
-                  pnpm build
-
-            - name: Upload artifact for deployment
-              uses: actions/upload-artifact@v4
-              with:
-                  name: ${{ env.AZURE_WEBAPP_NAME }}
-                  path: .
     deploy:
         runs-on: ubuntu-latest
-        needs: build
-        environment:
-            name: 'development'
-            url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
         steps:
-            - name: Download artifact from build job
-              uses: actions/download-artifact@v4
-              with:
-                  name: ${{ env.AZURE_WEBAPP_NAME }}
+            - name: Checkout code
+              uses: actions/checkout@v3
 
-            - name: 'Deploy to Azure WebApp'
-              id: deploy-to-webapp
-              uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
+            - name: Login to Azure
+              uses: azure/login@v1
               with:
-                  app-name: ${{ env.AZURE_WEBAPP_NAME }}
-                  publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-                  package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+                  creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+            - name: Build and push image
+              uses: azure/docker-login@v1
+              with:
+                  login-server: mtbracesdev.azurecr.io
+                  username: ${{ secrets.REGISTRY_USERNAME }}
+                  password: ${{ secrets.REGISTRY_PASSWORD }}
+
+            - name: Build and push
+              run: |
+                  docker build -t mtbracesdev.azurecr.io/switchback-backend:${{ github.sha }} .
+                  docker push mtbracesdev.azurecr.io/switchback-backend:${{ github.sha }}
+
+            - name: Deploy to Container Apps
+              uses: azure/container-apps-deploy-action@v1
+              with:
+                  containerAppName: switchback-dev-env
+                  resourceGroup: switchback-dev
+                  imageToDeploy: mtbracesdev.azurecr.io/switchback-backend:${{ github.sha }}
