--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -13,12 +13,14 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Login to Azure
-              uses: azure/login@v1
+              uses: azure/login@v2
               with:
-                  creds: ${{ secrets.AZURE_CREDENTIALS }}
+                  client-id: ${{ secrets.AZURE_CLIENT_ID }}
+                  tenant-id: ${{ secrets.AZURE_TENNANT_ID }}
+                  subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
             - name: Build and push image
-              uses: azure/docker-login@v1
+              uses: azure/docker-login@v2
               with:
                   login-server: mtbracesdev.azurecr.io
                   username: ${{ secrets.REGISTRY_USERNAME }}
